--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -7,6 +7,11 @@ contact_links:
         Commercial customers who pay for SFTPGo Support package can report their problems here.
         Those reports are prioritized over unpaid requests.
 
+  - name: SFTPGo Commercial 1-time Config Help
+    url: https://www.sftpgo.com/support
+    about: >
+        We can help you configure your SFTPGo for $1000
+
   - name: GitHub Community Support
     url: https://github.com/orgs/community/discussions
     about: Please ask and answer questions here.
