--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -12,10 +12,10 @@ contact_links:
     about: >
         We can help you configure your SFTPGo for $1000
 
-  - name: GitHub Community Support
-    url: https://github.com/orgs/community/discussions
-    about: Please ask and answer questions here.
-
-  - name: GitHub Security Bug Bounty
-    url: https://bounty.github.com/
-    about: Please report security vulnerabilities here.
+        #  - name: GitHub Community Support
+        #    url: https://github.com/orgs/community/discussions
+        #    about: Please ask and answer questions here.
+        #
+        #  - name: GitHub Security Bug Bounty
+        #    url: https://bounty.github.com/
+        #    about: Please report security vulnerabilities here.
