--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -47,3 +47,55 @@ body:
         - Yes
         - No
    
+  - type: textarea
+    attributes:
+      label: Version of SFTPGo
+      description: Paste the output of sftpgo -v
+      placeholder: SFTPGo 2.5.1-dev ...
+      value: sftpgo version
+    validations:
+      required: true
+
+  - type: textarea
+    attributes:
+      label: Configuration file
+      description: Paste your SFTPGo configuration file
+      value: configfile
+    validations:
+      required: true
+
+  - type: textarea
+    id: logs
+    attributes:
+      label: Relevant log output
+      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      render: shell
+
+
+  - type: textarea
+    id: what-happened
+    attributes:
+      label: What happened?
+      description: Also tell us, what did you expect to happen?
+      placeholder: Tell us what you see!
+      value: "A bug happened!"
+    validations:
+      required: true
+
+  - type: textarea
+    attributes:
+      label: Operating System
+      description: What operating system are you using?
+      placeholder: Example: macOS Big Sur
+      value: operating system
+    validations:
+      required: true
+
+  - type: checkboxes
+    id: terms
+    attributes:
+      label: Code of Conduct
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
+      options:
+        - label: I agree to follow this project's Code of Conduct
+          required: true
