--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -86,7 +86,7 @@ body:
     attributes:
       label: Operating System
       description: What operating system are you using?
-      placeholder: Example: macOS Big Sur
+      placeholder: Example - macOS Big Sur
       value: operating system
     validations:
       required: true
