--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -31,11 +31,11 @@ body:
       description: We'd like to understand your SFTPGo usecase more
       multiple: true
       options:
-        - Private user, home usecase (home backup/VPS)
-        - Professional user, 1 person business
-        - Small business (3-person firm with file exchange?)
-        - Medium business
-        - Enterprise
+        - "Private user, home usecase (home backup/VPS)"
+        - "Professional user, 1 person business"
+        - "Small business (3-person firm with file exchange?)"
+        - "Medium business"
+        - "Enterprise"
  
   - type: dropdown
     id: support
@@ -44,8 +44,8 @@ body:
       description: We want you to become our champion in your company; we'd love to talk to your C-level execs to potentially consider sponsoring SFTPGo
       multiple: false
       options:
-        - Yes
-        - No
+        - "Yes"
+        - "No"
    
   - type: textarea
     attributes:
